// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YooBreadcrumbsComponent property rendering Should have a context menu if there are more than 7 items navigation items 1`] = `
<yoo-breadcrumbs
  class="hydrated"
  data-yoo-breadcrumbs-host=""
  role="navigation"
>
  
  <div
    attr-layout="row"
    class="breadcrumb long"
    data-yoo-breadcrumbs=""
  >
    <yoo-context-menu
      data-yoo-breadcrumbs=""
    >
      <div
        class="breadcrumb-item more"
        data-yoo-breadcrumbs=""
        slot="trigger"
      >
        <span
          class="more-icons"
          data-yoo-breadcrumbs=""
        >
          <i
            class="yo-more"
            data-yoo-breadcrumbs=""
          />
           
          <i
            class="yo-arrow-dropdown"
            data-yoo-breadcrumbs=""
          />
        </span>
        <span
          class="yo-right"
          data-yoo-breadcrumbs=""
        />
      </div>
      <div
        attr-layout="column"
        class="context-container"
        data-yoo-breadcrumbs=""
      >
        <span
          data-yoo-breadcrumbs=""
        >
          Item 1
        </span>
      </div>
    </yoo-context-menu>
    <div
      class="breadcrumb-item"
      data-yoo-breadcrumbs=""
    >
      <span
        data-yoo-breadcrumbs=""
      >
        Item 2
      </span>
      <i
        class="yo-right"
        data-yoo-breadcrumbs=""
      />
    </div>
    <div
      class="breadcrumb-item"
      data-yoo-breadcrumbs=""
    >
      <span
        data-yoo-breadcrumbs=""
      >
        Item 3
      </span>
      <i
        class="yo-right"
        data-yoo-breadcrumbs=""
      />
    </div>
    <div
      class="breadcrumb-item"
      data-yoo-breadcrumbs=""
    >
      <span
        data-yoo-breadcrumbs=""
      >
        Item 4
      </span>
      <i
        class="yo-right"
        data-yoo-breadcrumbs=""
      />
    </div>
    <div
      class="breadcrumb-item"
      data-yoo-breadcrumbs=""
    >
      <span
        data-yoo-breadcrumbs=""
      >
        Item 5
      </span>
      <i
        class="yo-right"
        data-yoo-breadcrumbs=""
      />
    </div>
    <div
      class="breadcrumb-item"
      data-yoo-breadcrumbs=""
    >
      <span
        data-yoo-breadcrumbs=""
      >
        Item 6
      </span>
      <i
        class="yo-right"
        data-yoo-breadcrumbs=""
      />
    </div>
    <div
      class="breadcrumb-item"
      data-yoo-breadcrumbs=""
    >
      <span
        data-yoo-breadcrumbs=""
      >
        Item 7
      </span>
      <i
        class="yo-right"
        data-yoo-breadcrumbs=""
      />
    </div>
    <div
      class="breadcrumb-item active"
      data-yoo-breadcrumbs=""
    >
      <span
        data-yoo-breadcrumbs=""
      >
        Item 8
      </span>
      
    </div>
  </div>
</yoo-breadcrumbs>
`;

exports[`YooBreadcrumbsComponent property rendering Should have a the correct number of items 1`] = `
<yoo-breadcrumbs
  class="hydrated"
  data-yoo-breadcrumbs-host=""
  role="navigation"
>
  
  <div
    attr-layout="row"
    class="breadcrumb"
    data-yoo-breadcrumbs=""
  >
    
    <div
      class="breadcrumb-item"
      data-yoo-breadcrumbs=""
    >
      <span
        data-yoo-breadcrumbs=""
      >
        Item 1
      </span>
      <i
        class="yo-right"
        data-yoo-breadcrumbs=""
      />
    </div>
    <div
      class="breadcrumb-item"
      data-yoo-breadcrumbs=""
    >
      <span
        data-yoo-breadcrumbs=""
      >
        Item 2
      </span>
      <i
        class="yo-right"
        data-yoo-breadcrumbs=""
      />
    </div>
    <div
      class="breadcrumb-item"
      data-yoo-breadcrumbs=""
    >
      <span
        data-yoo-breadcrumbs=""
      >
        Item 3
      </span>
      <i
        class="yo-right"
        data-yoo-breadcrumbs=""
      />
    </div>
    <div
      class="breadcrumb-item"
      data-yoo-breadcrumbs=""
    >
      <span
        data-yoo-breadcrumbs=""
      >
        Item 4
      </span>
      <i
        class="yo-right"
        data-yoo-breadcrumbs=""
      />
    </div>
    <div
      class="breadcrumb-item active"
      data-yoo-breadcrumbs=""
    >
      <span
        data-yoo-breadcrumbs=""
      >
        Item 5
      </span>
      
    </div>
  </div>
</yoo-breadcrumbs>
`;

exports[`YooBreadcrumbsComponent property rendering Should have an active navigation item 1`] = `
<yoo-breadcrumbs
  class="hydrated"
  data-yoo-breadcrumbs-host=""
  role="navigation"
>
  
  <div
    attr-layout="row"
    class="breadcrumb"
    data-yoo-breadcrumbs=""
  >
    
    <div
      class="breadcrumb-item"
      data-yoo-breadcrumbs=""
    >
      <span
        data-yoo-breadcrumbs=""
      >
        Item 1
      </span>
      <i
        class="yo-right"
        data-yoo-breadcrumbs=""
      />
    </div>
    <div
      class="breadcrumb-item active"
      data-yoo-breadcrumbs=""
    >
      <span
        data-yoo-breadcrumbs=""
      >
        Item 2
      </span>
      
    </div>
  </div>
</yoo-breadcrumbs>
`;

exports[`YooBreadcrumbsComponent property rendering Should have navigation items 1`] = `
<yoo-breadcrumbs
  class="hydrated"
  data-yoo-breadcrumbs-host=""
  role="navigation"
>
  
  <div
    attr-layout="row"
    class="breadcrumb"
    data-yoo-breadcrumbs=""
  >
    
    <div
      class="breadcrumb-item"
      data-yoo-breadcrumbs=""
    >
      <span
        data-yoo-breadcrumbs=""
      >
        Item 1
      </span>
      <i
        class="yo-right"
        data-yoo-breadcrumbs=""
      />
    </div>
    <div
      class="breadcrumb-item active"
      data-yoo-breadcrumbs=""
    >
      <span
        data-yoo-breadcrumbs=""
      >
        Item 2
      </span>
      
    </div>
  </div>
</yoo-breadcrumbs>
`;

exports[`YooBreadcrumbsComponent property rendering Should not have a context menu if there are exactly 7 items navigation items 1`] = `
<yoo-breadcrumbs
  class="hydrated"
  data-yoo-breadcrumbs-host=""
  role="navigation"
>
  
  <div
    attr-layout="row"
    class="breadcrumb"
    data-yoo-breadcrumbs=""
  >
    
    <div
      class="breadcrumb-item"
      data-yoo-breadcrumbs=""
    >
      <span
        data-yoo-breadcrumbs=""
      >
        Item 1
      </span>
      <i
        class="yo-right"
        data-yoo-breadcrumbs=""
      />
    </div>
    <div
      class="breadcrumb-item"
      data-yoo-breadcrumbs=""
    >
      <span
        data-yoo-breadcrumbs=""
      >
        Item 2
      </span>
      <i
        class="yo-right"
        data-yoo-breadcrumbs=""
      />
    </div>
    <div
      class="breadcrumb-item"
      data-yoo-breadcrumbs=""
    >
      <span
        data-yoo-breadcrumbs=""
      >
        Item 3
      </span>
      <i
        class="yo-right"
        data-yoo-breadcrumbs=""
      />
    </div>
    <div
      class="breadcrumb-item"
      data-yoo-breadcrumbs=""
    >
      <span
        data-yoo-breadcrumbs=""
      >
        Item 4
      </span>
      <i
        class="yo-right"
        data-yoo-breadcrumbs=""
      />
    </div>
    <div
      class="breadcrumb-item"
      data-yoo-breadcrumbs=""
    >
      <span
        data-yoo-breadcrumbs=""
      >
        Item 5
      </span>
      <i
        class="yo-right"
        data-yoo-breadcrumbs=""
      />
    </div>
    <div
      class="breadcrumb-item"
      data-yoo-breadcrumbs=""
    >
      <span
        data-yoo-breadcrumbs=""
      >
        Item 6
      </span>
      <i
        class="yo-right"
        data-yoo-breadcrumbs=""
      />
    </div>
    <div
      class="breadcrumb-item active"
      data-yoo-breadcrumbs=""
    >
      <span
        data-yoo-breadcrumbs=""
      >
        Item 7
      </span>
      
    </div>
  </div>
</yoo-breadcrumbs>
`;

exports[`YooBreadcrumbsComponent property rendering Should not have a context menu if there are less than 7 items navigation items 1`] = `
<yoo-breadcrumbs
  class="hydrated"
  data-yoo-breadcrumbs-host=""
  role="navigation"
>
  
  <div
    attr-layout="row"
    class="breadcrumb"
    data-yoo-breadcrumbs=""
  >
    
    <div
      class="breadcrumb-item"
      data-yoo-breadcrumbs=""
    >
      <span
        data-yoo-breadcrumbs=""
      >
        Item 1
      </span>
      <i
        class="yo-right"
        data-yoo-breadcrumbs=""
      />
    </div>
    <div
      class="breadcrumb-item"
      data-yoo-breadcrumbs=""
    >
      <span
        data-yoo-breadcrumbs=""
      >
        Item 2
      </span>
      <i
        class="yo-right"
        data-yoo-breadcrumbs=""
      />
    </div>
    <div
      class="breadcrumb-item"
      data-yoo-breadcrumbs=""
    >
      <span
        data-yoo-breadcrumbs=""
      >
        Item 3
      </span>
      <i
        class="yo-right"
        data-yoo-breadcrumbs=""
      />
    </div>
    <div
      class="breadcrumb-item"
      data-yoo-breadcrumbs=""
    >
      <span
        data-yoo-breadcrumbs=""
      >
        Item 4
      </span>
      <i
        class="yo-right"
        data-yoo-breadcrumbs=""
      />
    </div>
    <div
      class="breadcrumb-item"
      data-yoo-breadcrumbs=""
    >
      <span
        data-yoo-breadcrumbs=""
      >
        Item 5
      </span>
      <i
        class="yo-right"
        data-yoo-breadcrumbs=""
      />
    </div>
    <div
      class="breadcrumb-item active"
      data-yoo-breadcrumbs=""
    >
      <span
        data-yoo-breadcrumbs=""
      >
        Item 6
      </span>
      
    </div>
  </div>
</yoo-breadcrumbs>
`;
